<resources>
    <string name="app_name">Farmss</string>

    <!--String related to Description-->
    <string name="Launcher_desc">LauncherBackgroundImage</string>
    <string name="Welcome_msg">Welcome You !</string>
    <string name="Welcome_msg_mr"> “फार्म्स”आपले स्वागत करीत आहे !</string>
    <string name="Mobile"> मोबाइल नंबर</string>
    <string name="Password">पासवर्ड</string>
    <string name="Login">लॉगिन</string>
    <string name="ForgetPassword">पासवर्ड विसरला?</string>
    <string name="Register">फार्म्स नोंद  आहे का? आत्ताच नोंदणी करा !</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="Ok">जतन करा </string>
    <string name="Close">रद्द करा </string>
    <string name="Name">नाव</string>
    <string name="select_State">राज्य निवडा</string>
    <string name="select_District">जिल्हा निवडा  </string>
    <string name="select_Tehsil">तालुका निवडा </string>
    <string name="select_village">गाव निवडा </string>
    <string name="pincode">पिन कोड</string>
    <string name="signup">नोंदणी करा</string>
    <string name="terms">I Agree with Terms &amp; Condition .</string>
    <string name="EnterPlotSize">माती परिक्षण किती जागेसाठी केले आहे ?</string>
    <string name="Guntha">गुंठे</string>
    <string name="guntha">Guntha</string>
    <string name="Acre">एकर</string>
    <string name="acre">Acre</string>
    <string name="pHTest">pH </string>
    <string name="NTest">N </string>
    <string name="PTest">P </string>
    <string name="KTest">K </string>
    <string name="pH">pH :</string>
    <string name="N">N :</string>
    <string name="P">P :</string>
    <string name="K">K :</string>
    <string name="Select_Crop">पिके निवडा</string>
    <string name="SoilTesting">माती परीक्षण</string>
    <string name="FurtilizerRecommendation">खालिलप्रमाणे खते वापरा</string>
    <string name="Unit_Furtilizer">कि.</string>
    <string name="Recommendation_for_N">N : युरिया </string>
    <string name="Recommendation_for_P">P : पोटॅश </string>
    <string name="Recommendation_for_K">K : सुपर फॉस्फेट </string>
    <string name="Done">Done</string>
    <string name="EnterValidMob">वैध मोबाइल नंबर टाका</string>
    <string name="EnterValidPass">वैध संकेतशब्द टाका</string>
    <string name="EnterValidPlotsize">वैध प्लॉट आकार टाका</string>
    <string name="EnterName">नाव टाका</string>
    <string name="Alphabetic_Only">फक्त मूळाक्षरे टाका</string>
    <string name="EnterMobNo">मोबाइल नंबर टाका</string>
    <string name="EnterPass">पासवर्ड टाका </string>
    <string name="Enter_Valid_Pincode">वैध पिनकोड टाका</string>
    <string name="EnterVillage">गांव टाका</string>

    <!--SelectCropActivity-->
    <string name="Cabbage">कोबी</string>
    <string name="Onion">कांदा</string>
    <string name="Tomato">टोमॅटो</string>
    <string name="Chilli">मिरची</string>
    <string name="Grapes">द्राक्ष</string>
    <string name="Other_Crops">इतर</string>

    <!--String related to Activity lable-->
    <string name="LoginActivityLable">लॉगीन/नोंदणी करा</string>
    <string name="RegisterActivityLable">माहिती भरा</string>
    <string name="PlotsizeActivityLable">प्लॉट आकार जोडा</string>
    <string name="SoiltestingActivityLable">माती परीक्षण</string>
    <string name="SoilresultActivityLable">माती परिक्षण निकाल</string>
    <string name="CropSelectionActivityLable">पिके निवडा</string>
    <string name="RecommendedFurtilizerActivityLable">सुचवलेली खते</string>
    <string name="Select_District">जिल्हा निवडा</string>
    <string name="Select_Tehsil">तालुका निवडा</string>
    <string name="Select_Village">गांव निवडा</string>
    <string name="Village">गांव</string>

    <!--String related to String-Array-->
    <string-array name="state">
        <item>Maharashtra</item>
    </string-array>
    <string-array name="district">
        <item> Select District</item>
        <item> Ahmednagar </item>
        <item> Akola </item>
        <item> Amravati</item>
        <item> Aurangabad</item>
        <item> Beed</item>
        <item> Bhandara</item>
        <item> Buldhana</item>
        <item> Chandrapur</item>
        <item> Dhule </item>
        <item> Gadchiroli</item>
        <item> Gondia</item>
        <item> Hingoli</item>
        <item> Jalgaon</item>
        <item> Jalna</item>
        <item> Kolhapur</item>
        <item> Latur</item>
        <item> Mumbai City</item>
        <item> Mumbai Suburban</item>
        <item> Nagpur</item>
        <item> Nanded</item>
        <item> Nandurbar</item>
        <item> Nashik</item>
        <item> Osmanabad</item>
        <item> Parbhani</item>
        <item> Pune</item>
        <item> Raigad</item>
        <item> Ratnagiri</item>
        <item> Sangli</item>
        <item> Satara</item>
        <item> Sindhudurg</item>
        <item> Solapur</item>
        <item> Thane</item>
        <item> Wardha</item>
        <item> Washim</item>
        <item> Yavatmal</item>
        <item> Palghar</item>
    </string-array>

</resources>
