<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imcgeek.android.farmss.activities.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:id="@+id/activity_register"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/ET_NameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textPersonName"
            android:lines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="@string/Name"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"/>
        <EditText
            android:id="@+id/ET_MobileRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="number"
            android:maxLength="10"
            android:lines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="@string/Mobile"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"/>
        <EditText
            android:id="@+id/ET_PasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="@string/Password"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SelectState"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/stylespinner"
            android:prompt="@string/select_State"
            android:spinnerMode="dialog"
            android:entries="@array/state">
        </Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SelectDistrict"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/stylespinner"
            android:prompt="@string/select_District"
            android:spinnerMode="dialog">
        </Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SelectTehsil"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/stylespinner"
            android:prompt="@string/select_Tehsil"
            android:spinnerMode="dialog">
        </Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SelectVillage"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/stylespinner"
            android:prompt="@string/select_village"
            android:spinnerMode="dialog">
        </Spinner>
        <EditText
            android:id="@+id/ET_Pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="number"
            android:maxLength="6"
            android:lines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="@string/pincode"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"/>
        <CheckBox android:id="@+id/checkbox_Terms"
            android:layout_width="wrap_content"
            android:buttonTint="@color/btnBackgroundColor"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/colorPrimaryText"
            android:onClick="onChecboxClicked"/>
        <Button
            android:id="@+id/Btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/btnBackgroundColor"
            android:text="@string/signup"
            android:elevation="4dp"
            android:textSize="20sp"
            android:textColor="@color/btnTextColor"
            android:onClick="OnButtonClick"/>
    </LinearLayout>
</ScrollView>
