<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imcgeek.android.farmss.activities.CropSelectionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/activity_crop_selection"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">
            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <Button
                    android:text="@string/Cabbage"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorAccent"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/btn_cabbage"
                    android:textColor="@color/btnTextColor"
                    android:textSize="20sp"
                    android:onClick="OnButtonClick"/>
                <Button
                    android:text="@string/Onion"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorAccent"
                    android:id="@+id/btn_onion"
                    android:textColor="@color/btnTextColor"
                    android:textSize="20sp"
                    android:onClick="OnButtonClick"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <Button
                    android:text="@string/Tomato"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:id="@+id/btn_tomato"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/colorAccent"
                    android:textColor="@color/btnTextColor"
                    android:textSize="20sp"
                    android:onClick="OnButtonClick"/>
                <Button
                    android:text="@string/Chilli"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/btn_chilli"
                    android:background="@color/colorAccent"
                    android:textColor="@color/btnTextColor"
                    android:textSize="20sp"
                    android:onClick="OnButtonClick"/>
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <Button
                    android:text="@string/Grapes"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:id="@+id/btn_grapes"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/colorAccent"
                    android:textColor="@color/btnTextColor"
                    android:textSize="20sp"
                    android:onClick="OnButtonClick"/>
                <Button
                    android:text="@string/Other_Crops"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/btn_other"
                    android:background="@color/colorAccent"
                    android:textColor="@color/btnTextColor"
                    android:textSize="20sp"
                    android:onClick="OnButtonClick"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>
