<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_plotsize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorBackground"
    android:weightSum="1"
    tools:context="com.imcgeek.android.farmss.activities.PlotsizeActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/tv_selectLandType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:text="@string/EnterPlotSize"/>
        <RadioGroup
            android:id="@+id/plotType"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/RadioButtonGuntha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Guntha"
                android:checked="true"
                android:buttonTint="@color/btnBackgroundColor"
                android:padding="@dimen/activity_vertical_margin"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                />
            <RadioButton
                android:id="@+id/RadioButtonAcre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acre"
                android:buttonTint="@color/btnBackgroundColor"
                android:padding="@dimen/activity_vertical_margin"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                />
        </RadioGroup>

        <EditText
            android:id="@+id/PlotSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:maxLength="4"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_gravity="center_horizontal"
            android:allowUndo="false" />

        <Button
            android:id="@+id/GoForSoilTesting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/btnBackgroundColor"
            android:text="@string/SoilTesting"
            android:elevation="4dp"
            android:textSize="20sp"
            android:textColor="@color/btnTextColor"
            android:onClick="OnButtonClick" />
    </LinearLayout>
</LinearLayout>
