<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:background="@color/colorBackground"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.imcgeek.android.farmss.activities.RecommendedFurtilizerActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/activity_recommended_furtilizer">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FurtilizerRecommendation"
        android:textSize="25sp"
        android:textColor="@color/textColorHint"
        android:id="@+id/textView2"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_weight="1"
            android:gravity="fill"
            android:padding="20dp"
            android:background="@color/colorAccent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation_for_N"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/txt_N"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/N_result"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="100"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_Furtilizer"
                android:id="@+id/Unit1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="fill"
            android:padding="20dp"
            android:background="@color/colorAccent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation_for_P"
                android:id="@+id/txt_P"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/P_result"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="60"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_Furtilizer"
                android:id="@+id/Unit2"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="fill"
            android:padding="20dp"
            android:background="@color/colorAccent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation_for_K"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/txt_k"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/K_result"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="80"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_Furtilizer"
                android:id="@+id/Unit3"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="@color/btnTextColor"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/btnBackgroundColor"
        android:text="@string/Done"
        android:elevation="4dp"
        android:textSize="20sp"
        android:enabled="false"
        android:textColor="@color/btnTextColor"
        android:onClick="OnButtonClick"/>
</LinearLayout>
</ScrollView>
